--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,10 @@ variables
 */
 
 :root {
-  --clr-primary: #678e3e;
-  --clr-primary-light: #beed8c;
-  --clr-grey--1: #102a42;
-  --clr-grey--5: #617d98;
+  --clr-primary: #301f10;
+  --clr-grey--1: #804f19;
+  --clr-primary-light: #a57949;
+  --clr-grey--5: #794b18;
   --clr-grey--10: #f1f5f8;
   --clr-white: #fff;
   --ff-primary: "caramaran", sans-serif;
@@ -213,8 +213,8 @@ Navbar
   position: fixed;
   top: 5%;
   left: 5%;
-  font-size: 2.5rem;
-  color: var(--clr-primary);
+  font-size: 2rem;
+  color: var(--clr-primary-light);
   z-index: 1;
   cursor: pointer;
   /* animation */
@@ -244,7 +244,7 @@ Navbar
   padding-right: 1rem;
 }
 .nav-close {
-  font-size: 2.5rem;
+  font-size: 2rem;
   cursor: pointer;
   color: #f29c9c;
   transition: var(--transition);
@@ -257,7 +257,7 @@ Navbar
 }
 .nav-link {
   display: block;
-  font-size: 1.5rem;
+  font-size: 1rem;
   padding: 0.25rem 1rem;
   text-transform: uppercase;
   letter-spacing: var(--spacing);
@@ -269,7 +269,13 @@ Navbar
   padding-left: 1.5rem;
   border-left: 0.25rem solid var(--clr-primary);
 }
-@media screen and (min-width(768)) {
+@media screen and (min-width: 768px) {
+  .navbar {
+    width: 30vw;
+    max-width: 20rem;
+  }
+}
+@media screen and (min-width: 500px) {
   .navbar {
     width: 30vw;
     max-width: 20rem;
@@ -284,7 +290,7 @@ Header
 .header {
   min-height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../images/main-bcg.jpeg") center/cover no-repeat fixed;
+    url("/../images/img21.jpg") center/cover no-repeat fixed;
   position: relative;
   /* animation  */
   /* overflow-x: hidden; */
@@ -298,7 +304,7 @@ Header
 }
 .banner h2 {
   font-family: var(--ff-secondary);
-  color: var(--clr-primary);
+  color: var(--clr-primary-light);
   /* animation */
   animation: slideFromRight 5s ease-in-out 1;
 }
@@ -316,6 +322,7 @@ Header
   font-size: 1.25rem;
   padding: 1rem 1.75rem;
   animation: show 5s linear 1;
+  background: transparent;
 }
 /* content divider */
 .content-divider {
@@ -611,7 +618,7 @@ Footer
 =============
 */
 .footer {
-  background: #222;
+  background: var(--clr-primary);
   text-align: center;
 }
 .social-icon {
@@ -621,14 +628,14 @@ Footer
   transition: var(--transition);
 }
 .social-icon:hover {
-  color: var(--clr-primary);
+  color: var(--clr-grey--1);
 }
 .footer-text {
   margin-top: 1.25rem;
   text-transform: uppercase;
   color: var(--clr-white);
-  font-weight: 400;
+  font-weight: 700;
 }
 .company {
-  color: var(--clr-primary);
+  color: var(--clr-grey--5);
 }
