--- a/css/styles.css
+++ b/css/styles.css
@@ -290,7 +290,7 @@ Header
 .header {
   min-height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("/img21.jpg") center/cover no-repeat fixed;
+    url("../images/img21.jpg") center/cover no-repeat fixed;
   position: relative;
   /* animation  */
   /* overflow-x: hidden; */
