--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,11 @@ Header
   /* animation  */
   /* overflow-x: hidden; */
 }
+@media (min-width: 319px) and (max-width: 576px) {
+  .header {
+    object-fit: cover;
+  }
+}
 .banner {
   text-align: center;
   position: absolute;
